[package]
name = "chip8"
version = "0.2.0"
authors = ["John Deeny <jdeeny@gmail.com> "]
repository = "https://github.com/jdeeny/rust-chip8.git"
homepage = "https://github.com/jdeeny/rust-chip8"
license = "MIT"
readme = "README.md"
#documentation = ""
description = "Chip8 instruction coding/decoding and cpu simulator"
publish = false

[lib]
name = "chip8"

[dependencies]
rand = "^0.3.14"
strfmt = "^0.1.5"
clippy = {version = "0.0.79", optional = true}
drawbytes = { git = "https://github.com/jdeeny/drawbytes.git", version="^0.1.0"}

[features]
default = []
lints = ["clippy"]
